# C-project-template

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt  example_app.c
include/example/: example.h
src/: CMakeLists.txt  example.c
test/: CMakeLists.txt  example_test.c
test/unity/: CMakeLists.txt
